--- a/presentation.tex
+++ b/presentation.tex
@@ -16,6 +16,7 @@
 
 \normalfont
 \title{Recent Advances in Potentiometric Scanning Electrochemical Microscopy}
+\subtitle{Doctoral dissertation}
 \author
 {author:\\
 András Kiss\\
@@ -415,21 +416,27 @@ The effect of electric field on potentiometric SECM imaging.
 \includegraphics[trim = 10mm 20mm 0mm 10mm, clip, width=0.36\textwidth, angle=-90]{17012501.eps}\includegraphics[trim = 10mm 20mm 0mm 10mm, clip, width=0.36\textwidth, angle=-90]{17012503_deconvoluted.eps}
 \end{frame}
 
+%\begin{frame}
+%\frametitle{Conclusion}
+%\centering
+%I have succesfully improved the potentiometric SECM.
+%\end{frame}
+
 \begin{frame}
 \frametitle{Thesis 1--4}
 \scriptsize
 \begin{enumerate}
-\item \textbf{I've successfully shortened the response time of the potentiometric cell by using low resistance, solid-contact microelectrodes.}
+\item \textbf{I have shown the improved quality of potentiometric SECM images recorded with low resistance, solid-contact magnesium ion-selective microelectrodes.}
 I've compared them to conventional, liquid contact microelectrodes by basic characterization and model system study to prove the improved performance.
 
-\item \textbf{Taking adventage of the new solid-contact electrodes, I've studied the galvanic corrosion of magnesium} and the AZ63 magnesium alloy by mapping the concentration of dissolving ions.
-I used the new solid contact ion selective microelectrodes as SECM probes. This allowed faster scan rates.
+\item \textbf{Taking advantage of the new solid-contact microelectrodes, I have studied the galvanic corrosion of magnesium} and the AZ63 magnesium alloy by mapping the concentration of dissolving ions.
+The new solid contact ion selective microelectrodes allowed faster scan rates.
 
-\item \textbf{I've estimated the corrosion current based on the SECM measurements, and compared the result with that obtained with another, established method}; the indirect measurement of corrosion current.
+\item \textbf{I have estimated the corrosion current based on the SECM measurements, and compared the result with the direct measurement of corrosion current.}
 After applying Faraday's Law of Electrolysis, the two results could be compared.
 \textbf{They were very similar}, suggesting the applicability of SECM in obtaining quantitative results.
 
-\item \textbf{I've designed new scanning patterns and algorithms, optimized to radially symmetric targets.}
+\item \textbf{I have designed new scanning patterns and algorithms, optimized to radially symmetric targets.}
 I've proven that with these new patterns and algorithms, image distortion is lower compared to the conventional ones, by numerical simulations and experimental SECM scans.
 \end{enumerate}
 \end{frame}
@@ -439,19 +446,19 @@ I've proven that with these new patterns and algorithms, image distortion is low
 \scriptsize
 \begin{enumerate}
 \setcounter{enumi}{4}
-\item \textbf{I've shown that by using deconvolution, distortion can be significantly lowered in the potentiometric SECM images.}
-To prove the validity of the technique, I've compared deconvoluted images to equilibrium images scanned at a rate which allowed to record equilibrium potentials.
+\item \textbf{I am the first who used deconvolution to reduce distortion in potentiometric SECM images.}
+To prove the validity of the technique, I have compared deconvoluted images to equilibrium images scanned at a rate which allowed to record equilibrium potentials.
 
-\item \textbf{I've used deconvolution to restore potentiometric SECM images about a corroding carbon steel sample.}
+\item \textbf{I have successfully used deconvolution to restore potentiometric SECM images about a corroding carbon steel sample.}
 Evaluation of this data was possible, because scanning time \emph{and} distortion was reduced at the same time.
 
-\item \textbf{I've shown the applicability of blind deconvolution.}
+\item \textbf{I have shown the possibility of blind deconvolution.}
 This method can be used on measurements where the convolution function cannot be determined.
 
-\item I've proven that the electric field present in many studied systems -- galvanically corroding ones in particular -- affects the measured potential.
-The electric field has a direct influence on the measured potential, which is then a sum of this contribution and the Nernstian response associated with ion activity.
-This effect can cause serious errors in interpretations in the measurements.
-In this case, the error was almost four orders of magnitude.
+\item \textbf{I have successfully resolved the observed discrepancy in recent papers about impossibly high ion activities.}
+The electric field present in many studied systems -- galvanically corroding ones in particular -- has a direct influence on the measured potential.
+I have shown how big of an error can it cause.
+In the system I have studied, the error was almost four orders of magnitude.
 By taking this effect into account, a more accurate conclusion can be drawn.
 \end{enumerate}
 \end{frame}
@@ -502,23 +509,24 @@ By taking this effect into account, a more accurate conclusion can be drawn.
 \begin{frame}
 \frametitle{Acknowledgements}
 \scriptsize
-I wish to express my sincere gratitude to \textbf{professor Géza Nagy} for introducing me to the fascinating field of electrochemistry, and for the continuous support and guidance during the work.
+I wish to express my sincere gratitude to \textbf{professor Dr. Géza Nagy} for introducing me to the fascinating field of electrochemistry, and for the continuous support and guidance during the work.
 
-\vspace{5mm}
+\vspace{4mm}
 
-I am truly grateful to \textbf{Barna Kovács} for the enlighting discussions about microelectrode electronics. and to \textbf{Lívia Nagy} for the help received during the years of my PhD studies. I am also thankful to \textbf{Sándor Kunsági-Máté} for the support.
+I am truly grateful to \textbf{Dr. Barna Kovács} for the enlighting discussions about microelectrode electronics. and to \textbf{Dr. Lívia Nagy} for the help received during the years of my PhD studies. I am also thankful to \textbf{Dr. Sándor Kunsági-Máté} for the support.
 
-\vspace{5mm}
+\vspace{4mm}
 
-Many thanks are due to all my colleagues and friends with whom I have worked during my years as an undergraduate and doctoral student.
+I am thankful to \textbf{Dr. Lajos Höfler} and \textbf{Dr. Balázs Csóka} for reviewing my dissertation draft. I am also thankful to all the anonymous referees who gave meaningful feedback about my work as part of the peer review process.
 
-\vspace{5mm}
+\vspace{4mm}
 
 I am thankful to Professor Johan Bobacka, Ricardo M. Souto, Frank-Michael Matysik, Petr Skládal and Mohammed Bazzaoui for welcoming me in their laboratories.
 
-\vspace{5mm}
+\vspace{4mm}
 
-I am also thankful to all the anonymous referees who gave meaningful feedback about my work as part of the peer review process.
+Many thanks are due to all my colleagues and friends with whom I have worked during my years as an undergraduate and doctoral student.
+
 \end{frame}
 
 \begin{frame}
@@ -531,7 +539,79 @@ Thank you for your attention.
 	\frametitle{}
 	\centering
 \includegraphics[width=0.8\textwidth]{HL1.eps}
+\end{frame}
 
+\begin{frame}
+%	\frametitle{Calibration o}
+	\centering
+\includegraphics[width=0.45\textwidth]{phd-figure10.pdf}\hfill \includegraphics[width=0.45\textwidth]{phd-figure11.pdf}
+
+\vfill
+
+Dynamic response curves obtained for response time measurements to changes in MgCl$_2$ concentrations of 10$^{-1}$ M and 10$^{-2}$ M, in 10$^{-3}$ M NaCl.
+(A) liquid-contact, and (B) solid-contact Mg$^{2+}$ ISME.
+\end{frame}
+
+\begin{frame}
+\centering
+\includegraphics[width=0.45\textwidth]{phd-figure22.pdf}\hfill \includegraphics[width=0.45\textwidth]{phd-figure23.pdf}
+
+\vfill
+
+(A) Raw scan lines recorded $h$ = 100 $\upmu$m over the center of the pipette orifice, which served as a Mg$^{2+}$ ion diffusion source.
+(B) Scan lines obtained after deconvolution.
+$t_e$ equilibration intervals were 4.9 s (blue), 1.9 s (green), and 0.4 s (red).
+Probe movement speed was 1000 $\upmu$m/s, and probe movement interval was 0.1 s.
+8 scan lines were recorded in each case, 4 forward, 4 reverse scans.
+\end{frame}
+
+\begin{frame}
+\centering
+\includegraphics[width=0.25\textwidth]{phd-figure14.pdf} \includegraphics[width=0.25\textwidth]{phd-figure15.pdf}
+
+\includegraphics[width=0.5\textwidth]{phd-figure16.pdf}
+\vfill
+\small
+(A, B) Retracting and (C) lateral SECM linescans above the AZ63 magnesium-aluminium-zinc alloy sample initiated at different instances in time.
+The AZ63 sample first was corroding spontaneously (A), then galvanically coupled to the iron sample (B). Lateral scans in (C) were recorded above the uncoupled AZ63 sample.
+Scan rate: 10 $\upmu$m/s.
+\end{frame}
+
+\begin{frame}
+\centering
+\includegraphics[width=0.3\textwidth]{hanging.jpg}
+
+\includegraphics[width=0.7\textwidth]{phd-figure17.pdf}
+
+\vfill
+\small
+Transient response of the antimony microelectrode to analyte activity step.
+The measuring and reference electrodes were dipped into buffer solutions with pH = 4 before the measurements started, and pH = 6 at t = 0 s, respectively.
+Eq. 4.2 was fitted (red line) on the measurement (gray marks) from the pH step to the end of the curve when potential reaches equilibrium in the pH = 6 buffer.
+\end{frame}
+
+\begin{frame}
+\centering
+\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103106.eps}\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103106_deconvoluted.eps}%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{13121313_diff.eps}
+
+\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103107.eps}\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103107_deconvoluted.eps}
+
+SECM images before (A-B) and after (C-D) deconvolution.
+Images recorded with the (A) meander algorithm and (B) fast comb algorithm.
+Scans conducted with solid contact K$^+$ ion-selective micropipette.
+\end{frame}
+
+\begin{frame}
+\begin{center}
+\includegraphics[width=0.7\textwidth]{field.eps}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\centering
+\includegraphics[width=0.45\textwidth]{phd-figure20.pdf}\hfill \includegraphics[width=0.45\textwidth]{phd-figure21.pdf}
+\vfill
+(A) Raw, and, (B) deconvoluted SECM linescans above the center of the target, at h = 100 $\upmu$m height, using three different equilibration periods: 0.5 s, (green), 1 s, (blue), and 5 s, (red).
 \end{frame}
 
 \end{document}
