--- a/presentation.tex
+++ b/presentation.tex
@@ -16,7 +16,7 @@
 
 \normalfont
 \title{Recent Advances in Potentiometric Scanning Electrochemical Microscopy}
-\subtitle{Doctoral dissertation}
+\subtitle{PhD Thesis}
 \author
 {author:\\
 András Kiss\\
