--- a/presentation.tex
+++ b/presentation.tex
@@ -446,7 +446,7 @@ I've proven that with these new patterns and algorithms, image distortion is low
 \scriptsize
 \begin{enumerate}
 \setcounter{enumi}{4}
-\item \textbf{I am the first who used deconvolution to reduce distortion in potentiometric SECM images.}
+\item \textbf{I was the first to use deconvolution to reduce distortion in potentiometric SECM images.}
 To prove the validity of the technique, I have compared deconvoluted images to equilibrium images scanned at a rate which allowed to record equilibrium potentials.
 
 \item \textbf{I have successfully used deconvolution to restore potentiometric SECM images about a corroding carbon steel sample.}
@@ -521,7 +521,7 @@ I am thankful to \textbf{Dr. Lajos Höfler} and \textbf{Dr. Balázs Csóka} for 
 
 \vspace{4mm}
 
-I am thankful to Professor Johan Bobacka, Ricardo M. Souto, Frank-Michael Matysik, Petr Skládal and Mohammed Bazzaoui for welcoming me in their laboratories.
+I am thankful to professor Johan Bobacka, professor Ricardo M. Souto, professor Frank-Michael Matysik, professor Petr Skládal and professor Mohammed Bazzaoui for welcoming me to their laboratories.
 
 \vspace{4mm}
 
