--- a/presentation.tex
+++ b/presentation.tex
@@ -9,14 +9,16 @@
 \usepackage[utf8]{inputenc}
 %\usepackage[hungarian]{babel}
 \usepackage{gensymb}
+\usepackage{pgfplots}
+\usepackage{pst-plot}
 \usepackage{tikz}
-\usepackage[framemethod=tikz]{mdframed}
+\usepgfplotslibrary{external}
+\tikzexternalize
 \usepackage[version=3]{mhchem}
-
 
 \normalfont
 \title{Recent Advances in Potentiometric Scanning Electrochemical Microscopy}
-\subtitle{PhD Thesis}
+\subtitle{PhD Thesis submitted for final defense}
 \author
 {author:\\
 András Kiss\\
@@ -32,7 +34,7 @@ prof. Géza Nagy}
   \hfill \\
 
   \includegraphics[width=0.14\textwidth]{pte_logo.eps}\\
-  April 19, 2017
+  June 16, 2017
 }
 
 \date[]
@@ -44,7 +46,7 @@ prof. Géza Nagy}
 \begin{frame}
 	\centering
 	\includegraphics[width=0.6\textwidth]{secm.eps}
-	\frametitle{Potentiometric Scanning Electrochemical Microscopy}
+	\frametitle{Potentiometric \underline{S}canning \underline{E}lectro\underline{c}hemical \underline{M}icroscopy}
 	\framesubtitle{A Scanning Probe Microscopic technique}
 
 \end{frame}
@@ -308,7 +310,7 @@ $E_{cell}(t) = E_{cell}(\infty) + [E_{cell}(0) - E_{cell}(\infty)]e^{-t/\tau}$\\
 \node [rectangle, below of=measurement, draw, fill=green!20,text width=7em, text centered, rounded corners, minimum height=4em] (image) {deconvoluted\\ image};
 
 \draw [line width=0.5mm, ->] (reality) -- (measurement) node [pos=.5, right] (TextNode) {convolution : \small $E_{cell}(t) = E_{cell}(\infty) + [E_{cell}(0) - E_{cell}(\infty)]e^{-t/\tau}$};
-\draw [line width=0.5mm, ->] (measurement) -- (image) node [pos=.5, right] (TextNode) {deconvolution : \small $E_{cell}(\infty)      = \frac {\displaystyle [E_{cell}(t) - E_{cell}(0)]e^{-t/\tau}}    {\displaystyle 1 - e^{-t/RC}}$};
+\draw [line width=0.5mm, ->] (measurement) -- (image) node [pos=.5, right] (TextNode) {deconvolution : \small $E_{cell}(\infty)      = \frac {\displaystyle E_{cell}(t) - E_{cell}(0)e^{-t/\tau}}    {\displaystyle 1 - e^{-t/RC}}$};
 
 
 \end{tikzpicture}
@@ -437,7 +439,7 @@ After applying Faraday's Law of Electrolysis, the two results could be compared.
 \textbf{They were very similar}, suggesting the applicability of SECM in obtaining quantitative results.
 
 \item \textbf{I have designed new scanning patterns and algorithms, optimized to radially symmetric targets.}
-I've proven that with these new patterns and algorithms, image distortion is lower compared to the conventional ones, by numerical simulations and experimental SECM scans.
+I have proven that with these new patterns and algorithms, image distortion is lower compared to the conventional ones, by numerical simulations and experimental SECM scans.
 \end{enumerate}
 \end{frame}
 
@@ -513,15 +515,7 @@ I wish to express my sincere gratitude to \textbf{professor Dr. Géza Nagy} for 
 
 \vspace{4mm}
 
-I am truly grateful to \textbf{Dr. Barna Kovács} for the enlighting discussions about microelectrode electronics. and to \textbf{Dr. Lívia Nagy} for the help received during the years of my PhD studies. I am also thankful to \textbf{Dr. Sándor Kunsági-Máté} for the support.
-
-\vspace{4mm}
-
-I am thankful to \textbf{Dr. Lajos Höfler} and \textbf{Dr. Balázs Csóka} for reviewing my dissertation draft. I am also thankful to all the anonymous referees who gave meaningful feedback about my work as part of the peer review process.
-
-\vspace{4mm}
-
-I am thankful to professor Johan Bobacka, professor Ricardo M. Souto, professor Frank-Michael Matysik, professor Petr Skládal and professor Mohammed Bazzaoui for welcoming me to their laboratories.
+I am truly grateful to \textbf{Dr. Lívia Nagy} for the help received during the years of my PhD studies. I would like to thank \textbf{Dr. Barna Kovács} for the enlighting discussions about microelectrode electronics. I am also thankful to \textbf{Dr. Sándor Kunsági-Máté} for the support.
 
 \vspace{4mm}
 
@@ -534,23 +528,30 @@ Many thanks are due to all my colleagues and friends with whom I have worked dur
 Thank you for your attention.
 \end{frame}
 
-
 \begin{frame}
-	\frametitle{}
-	\centering
-\includegraphics[width=0.8\textwidth]{HL1.eps}
+\begin{figure}
+\centering
+%\begin{flushleft}
+%\hspace{1.5cm} A
+%\end{flushleft}
+
+\includegraphics[width=0.6\textwidth]{setup.eps} \vspace{1mm}
+
+%\begin{flushleft}
+%\hspace{1.5cm} B
+%\end{flushleft}
+
+\includegraphics[width=0.5\textwidth]{pipette_source.jpg}
+%\caption[Sketch and photo of the model system with the embedded glass pipette Mg$^{2+}$ or K$^+$ ion diffusion source, and the SECM scan setup.]{Sketch (A) and photo (B) of the model system with the embedded glass pipette Mg$^{2+}$ or K$^+$ ion diffusion source, and the SECM scan setup.
+%"$h$" is height of scan, the distance between the plane of the target (pipette orifice) and the SECM tip.
+%"$s$" is the step size, that is the distance between two neighbouring data aquisition points.
+%Red dots indicate the data aquisition points of the 2D raster scan pattern.
+%Not drawn to scale.}
+%\label{fig:setup}
+\end{figure}
 \end{frame}
 
-\begin{frame}
-%	\frametitle{Calibration o}
-	\centering
-\includegraphics[width=0.45\textwidth]{phd-figure10.pdf}\hfill \includegraphics[width=0.45\textwidth]{phd-figure11.pdf}
 
-\vfill
-
-Dynamic response curves obtained for response time measurements to changes in MgCl$_2$ concentrations of 10$^{-1}$ M and 10$^{-2}$ M, in 10$^{-3}$ M NaCl.
-(A) liquid-contact, and (B) solid-contact Mg$^{2+}$ ISME.
-\end{frame}
 
 \begin{frame}
 \centering
@@ -565,53 +566,55 @@ Probe movement speed was 1000 $\upmu$m/s, and probe movement interval was 0.1 s.
 8 scan lines were recorded in each case, 4 forward, 4 reverse scans.
 \end{frame}
 
-\begin{frame}
-\centering
-\includegraphics[width=0.25\textwidth]{phd-figure14.pdf} \includegraphics[width=0.25\textwidth]{phd-figure15.pdf}
-
-\includegraphics[width=0.5\textwidth]{phd-figure16.pdf}
-\vfill
-\small
-(A, B) Retracting and (C) lateral SECM linescans above the AZ63 magnesium-aluminium-zinc alloy sample initiated at different instances in time.
-The AZ63 sample first was corroding spontaneously (A), then galvanically coupled to the iron sample (B). Lateral scans in (C) were recorded above the uncoupled AZ63 sample.
-Scan rate: 10 $\upmu$m/s.
-\end{frame}
 
 \begin{frame}
+\frametitle{Practical example: corroding carbon steel sample}
+\framesubtitle{Scanned with an antimony microelectrode}
+\begin{figure}
 \centering
-\includegraphics[width=0.3\textwidth]{hanging.jpg}
+%top left bottom right
+\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{16012906.eps}\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{16012906_deconvoluted.eps}
 
-\includegraphics[width=0.7\textwidth]{phd-figure17.pdf}
+\includegraphics[width=0.24\textwidth]{cs_cut.jpg}
 
-\vfill
-\small
-Transient response of the antimony microelectrode to analyte activity step.
-The measuring and reference electrodes were dipped into buffer solutions with pH = 4 before the measurements started, and pH = 6 at t = 0 s, respectively.
-Eq. 4.2 was fitted (red line) on the measurement (gray marks) from the pH step to the end of the curve when potential reaches equilibrium in the pH = 6 buffer.
-\end{frame}
-
-\begin{frame}
-\centering
-\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103106.eps}\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103106_deconvoluted.eps}%\includegraphics[trim = 20mm 30mm 0mm 20mm, clip, width=0.3\textwidth, angle=-90]{13121313_diff.eps}
-
-\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103107.eps}\includegraphics[trim = 10mm 30mm 0mm 10mm, clip, width=0.3\textwidth, angle=-90]{14103107_deconvoluted.eps}
-
-SECM images before (A-B) and after (C-D) deconvolution.
-Images recorded with the (A) meander algorithm and (B) fast comb algorithm.
-Scans conducted with solid contact K$^+$ ion-selective micropipette.
+%\caption[Raw, and deconvoluted SECM image and microphoto of a corroding carbon-steel sample polarized anodically.]{Raw (A), and deconvoluted (B) SECM image and microphoto (C) of a corroding carbon-steel sample polarized anodically with a current density of 10 $mA/cm^2$. Measuring electrode was an antimony pH microelectrode. Potential was measured against an Ag/AgCl/3M KCl. Recorded $h$ = 100 $\upmu$m above the surface with probe movement speed of 1000 $\upmu$m/s, equilibration interval 0.4 s.}
+\end{figure}
 \end{frame}
 
 \begin{frame}
 \begin{center}
-\includegraphics[width=0.7\textwidth]{field.eps}
+\frametitle{The electric field during galvanic corrosion}
+\includegraphics[width=0.5\textwidth]{field.eps}
+
+\begin{equation*}
+\Delta E=E_M-E_R + (\phi_M - \phi_R)
+\label{eq:potential}
+\end{equation*}
 \end{center}
 \end{frame}
 
+
+
 \begin{frame}
+\begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{phd-figure20.pdf}\hfill \includegraphics[width=0.45\textwidth]{phd-figure21.pdf}
-\vfill
-(A) Raw, and, (B) deconvoluted SECM linescans above the center of the target, at h = 100 $\upmu$m height, using three different equilibration periods: 0.5 s, (green), 1 s, (blue), and 5 s, (red).
+\begin{tikzpicture}
+\begin{axis}[ymin=-30, ymax=60, xmin=0, xmax=60, xlabel={time, s}, ylabel={E, mV vs Ag/AgCl/ 3M KCl}, clip marker paths=true, width=7cm, height=7cm, legend style={draw=none}, legend cell align=left]
+\addplot [domain=0:60, color=red, mark=*] table {far.txt};
+\addplot [domain=0:60, color=blue, mark=*] table {close.txt};
+\addlegendentry{Ref. electrode far}
+\addlegendentry{Ref. electrode close}
+\end{axis}
+\end{tikzpicture}
+%\caption{Potential of an Mg$^{2+}$ ISME situated at 100$~\upmu$m above the center of the AZ63 sample, as a function of time. 0--20$~$s$~$: spontaneous corrosion, 20--40$~$s$~$: galvanic corrosion, 40--60$~$$~$: spontaneous corrosion. During galvanic corrosion, the AZ63 sample was coupled to an Fe sample, with identical surface. Reference electrode was a miniature Ag/AgCl/(3 M). Red = the reference electrode is far from the measuring electrode. Blue = the reference electrode is close to the measuring electrode. ,,Close'' = as close as possible, ,,far'' $~\approx ~$1$~$cm. When both electrodes are located close above the AZ63 sample, the potentiometric cell is unaffected by the generated electric field. On the other hand, when the reference electrode is located far from the AZ63 surface, the electric field affects the two electrodes to a different extent, which shows up as the middle section (20--40$~$s) of the red curve.}
+\end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{The effect of electric field on the measured potential}
+\framesubtitle{}
+\centering
+\includegraphics[width=0.466\textwidth]{field-figure1.pdf}\includegraphics[width=0.5\textwidth]{field-figure0.pdf}
 \end{frame}
 
 \end{document}
